@@ -21,7 +21,9 @@ Release notes:
 		* Fixes MMIO CRTC mirroring not existing on NV4 (only SR is mirrored)
 	* Add graphics and attribute register commands
 	* Added errors when failed to dump RAMHT, RAMRO, RAMFC and PGRAPH_CACHE
-	
+	* Implemented PDCurses integration (Ported to CMake!)
+		* Implement commands for x86 I/O ports: ioread8, ioread16, ioread32, iowrite8, iowrite16, iowrite32
+
 Old release notes:
 NVPlay 1.0.0 is now available.
 
